--- a/src/app/treetable/component/treetable.component.html
+++ b/src/app/treetable/component/treetable.component.html
@@ -1,28 +1,52 @@
-<table mat-table [dataSource]="dataSource" [ngClass]="formatElevation()">
+<div class="example-container mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" [ngClass]="formatElevation()">
 
-  <div *ngFor="let column of displayedColumns; first as isFirst;">
-    <ng-container matColumnDef="{{column}}">
-      <th mat-header-cell *matHeaderCellDef [ngClass]="{'vertical-separator': options.verticalSeparator}">
-        {{options.capitalisedHeader ? (column | titlecase) : column}}
-      </th>
-      <td mat-cell *matCellDef="let element" [ngClass]="{'vertical-separator': options.verticalSeparator}">
-        <div *ngIf="isFirst">
-          <div class="value-cell">
-            <div [innerHTML]="formatIndentation(element)"></div>
-            <mat-icon [ngStyle]="{'visibility': element.children.length ? 'visible' : 'hidden'}" (click)="onNodeClick(element)">
-              {{element.isExpanded ? 'keyboard_arrow_down' : 'keyboard_arrow_right'}}
-            </mat-icon>
-            <div>{{element.value[column]}}</div>
+    <div *ngFor="let column of displayedColumns; first as isFirst;">
+
+      <ng-container *ngIf="isFirst" matColumnDef="{{column}}" sticky>
+        <th mat-header-cell *matHeaderCellDef [ngStyle]="{'min-width': options.firstColumnMinWidth, 'max-width': options.firstColumnMaxWidth}" [ngClass]="{'vertical-separator': options.verticalSeparator}">
+          {{options.capitalisedHeader ? (column | titlecase) : column}}
+        </th>
+        <td mat-cell *matCellDef="let element" [ngStyle]="{'min-width': options.firstColumnMinWidth, 'max-width': options.firstColumnMaxWidth}" [ngClass]="{'vertical-separator': options.verticalSeparator}">
+          <div *ngIf="isFirst">
+            <div class="value-cell">
+              <div [innerHTML]="formatIndentation(element)"></div>
+              <mat-icon [ngStyle]="{'visibility': element.children.length ? 'visible' : 'hidden'}" (click)="onNodeClick(element)">
+                {{element.isExpanded ? 'keyboard_arrow_down' : 'keyboard_arrow_right'}}
+              </mat-icon>
+              <div>{{element.value[column]}}</div>
+            </div>
           </div>
-        </div>
-        <div *ngIf="!isFirst">
-          {{element.value[column]}}
-        </div>
-      </td>
-    </ng-container>
-  </div>
+          <div *ngIf="!isFirst">
+            {{element.value[column]}}
+          </div>
+        </td>
+      </ng-container>
 
-  <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-  <tr mat-row [ngClass]="{'highlight-on-hover': options.highlightRowOnHover}" *matRowDef="let row; columns: displayedColumns;"></tr>
 
-</table>
+      <ng-container *ngIf="!isFirst" matColumnDef="{{column}}">
+        <th mat-header-cell *matHeaderCellDef [ngStyle]="{'min-width': options.defaultColumnMinWidth, 'max-width': options.defaultColumnMaxWidth}" [ngClass]="{'vertical-separator': options.verticalSeparator}">
+          {{options.capitalisedHeader ? (column | titlecase) : column}}
+        </th>
+        <td mat-cell *matCellDef="let element" [ngStyle]="{'min-width': options.defaultColumnMinWidth, 'max-width': options.defaultColumnMaxWidth}" [ngClass]="{'vertical-separator': options.verticalSeparator}">
+          <div *ngIf="isFirst">
+            <div class="value-cell">
+              <div [innerHTML]="formatIndentation(element)"></div>
+              <mat-icon [ngStyle]="{'visibility': element.children.length ? 'visible' : 'hidden'}" (click)="onNodeClick(element)">
+                {{element.isExpanded ? 'keyboard_arrow_down' : 'keyboard_arrow_right'}}
+              </mat-icon>
+              <div>{{element.value[column]}}</div>
+            </div>
+          </div>
+          <div *ngIf="!isFirst">
+            {{element.value[column]}}
+          </div>
+        </td>
+      </ng-container>
+    </div>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row [ngClass]="{'highlight-on-hover': options.highlightRowOnHover}" *matRowDef="let row; columns: displayedColumns;"></tr>
+
+  </table>
+</div>
