--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -21,5 +21,6 @@
 </div>
 
 <h2>Tree as Single Root Node</h2>
-<treetable [tree]="singleRootTree"></treetable>
+<!--<treetable [tree]="singleRootTree"></treetable>-->
+<treetable [tree]="testing"></treetable>
 
